chore(wm): tidying up sway config and changing font to pragmatapro mono

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -19,9 +19,9 @@ include ./catppuccin.conf
 
 # No license for bold and italic yet
 font_family PragmataPro Mono Liga
-bold_font PragmataPro Mono Liga Bold
-# italic_font PragmataPro Mono Liga Italic
-# bold_italic_font PragmataPro Mono Liga Bold Italic
+bold_font PragmataPro Mono Liga
+italic_font PragmataPro Mono Liga
+bold_italic_font PragmataPro Mono Liga
 font_size 10
 
 # Slightly adjusted line height to improve glyp/icon for some fonts
