--- a/config/waybar/config
+++ b/config/waybar/config
@@ -87,7 +87,7 @@
     "format": "<span font='12'></span>",
     "tooltip": false,
     "on-click": "dolphin",
-    "on-click-middle": "kitty --class popupterm -e vifm",
+    "on-click-middle": "kitty --title popupterm -e vifm",
     "on-click-right": "nautilus"
   },
   "custom/editor": {
@@ -113,7 +113,7 @@
     "interval": 30,
     "format": " {percentage_used}%",
     "path": "/",
-    "on-click": "kitty --class popupterm gotop",
+    "on-click": "kitty --title popupterm gotop",
     "tooltip": true,
     "tooltip-format": "{used} / {total}"
   },
@@ -122,7 +122,7 @@
     "format": "<span font='12' rise='-1500'> </span><span rise='500'>{}</span>",
     "return-type": "json",
     "exec": "/etc/nixos/scripts/waybar/waybar-diskinfo",
-    "on-click": "kitty --class popupterm gotop",
+    "on-click": "kitty --title popupterm gotop",
     "tooltip": true,
     "tooltip-format": "{used} / {total}"
   },
@@ -144,13 +144,13 @@
 ",
     "on-click": "generated=$(cat /tmp/tmpmailgen) && swaymsg exec wl-copy $generated",
     "on-click-middle": "rm -f /tmp/tmpmailgen; generated=$(tmpmail -g) && echo -n $generated > /tmp/tmpmailgen && swaymsg exec wl-copy $generated",
-    "on-click-right": "kitty --hold --class popupterm tmpmail -r $(cat /tmp/tmpmailgen)",
+    "on-click-right": "kitty --hold --title popupterm tmpmail -r $(cat /tmp/tmpmailgen)",
     "tooltip": true
   },
   "custom/wttr": {
     "format": "{}",
     "exec": "curl https://wttr.in/Sundsvall,Sweden?format=%c%3Cspan%20rise=%22-1750%22%3E%t%3C/span%3E",
-    "on-click": "kitty --hold --class popupterm curl wttr.in/Sundsvall",
+    "on-click": "kitty --hold --title popupterm curl wttr.in/Sundsvall",
     "interval": 1800,
     "tooltip": false
   },
@@ -181,7 +181,7 @@
     "tooltip": false
   },
   "cpu": {
-    "on-click": "kitty --class popupterm gotop",
+    "on-click": "kitty --title popupterm gotop",
     "tooltip": false,
     "format": "<span font='12' rise='-1500'>﬙ </span><span rise='500'>{usage}%</span>",
     "interval": 10
