--- a/config/waybar/config
+++ b/config/waybar/config
@@ -57,8 +57,8 @@
     "spacing": 22
   },
   "clock": {
-    "format": "<span font='12' rise='-1500'></span> {:%R}",
-    "format-alt": "<span font='12' rise='-1500'></span> {:%A, %B %d}",
+    "format": "<span font='16' rise='-1500'></span> {:%R}",
+    "format-alt": "<span font='16' rise='-1500'></span> {:%A, %B %d}",
     "tooltip": false,
     "on-click-middle": "xdg-open https://calendar.protonmail.com",
     "on-click-right": "xdg-open https://calendar.google.com"
@@ -73,38 +73,38 @@
     "return-type": "json"
   },
   "custom/browser": {
-    "format": "<span font='12' rise='-1500'></span>",
+    "format": "<span font='16' rise='-1500'></span>",
     "tooltip": false,
     "on-click": "if pgrep firefox; then swaymsg [app_id=\"firefox\"] focus; else firefox; fi",
     "on-click-right": "firefox --new-window"
   },
   "custom/mail": {
-    "format": "<span font='12'></span>",
+    "format": "<span font='16'></span>",
     "tooltip": false,
     "on-click": "xdg-open https://mail.protonmail.com",
   },
   "custom/files": {
-    "format": "<span font='12'></span>",
+    "format": "<span font='16'></span>",
     "tooltip": false,
     "on-click": "dolphin",
     "on-click-middle": "kitty --title popupterm -e vifm",
     "on-click-right": "nautilus"
   },
   "custom/editor": {
-    "format": "<span font='12'></span>",
+    "format": "<span font='16'></span>",
     "tooltip": false,
     "on-click": "sh -c \"if swaymsg -t get_tree | grep vimterm; then swaymsg [app_id=\"vimterm\"] focus; else kitty --class=vimterm; fi\"",
     "on-right-click": "if pgrep codium; then swaymsg [instance=\"vscodium\"] focus; else codium; fi"
   },
   "custom/terminal": {
-    "format": "<span font='12'>ﲵ</span>",
+    "format": "<span font='16'>ﲵ</span>",
     "tooltip": false,
     "on-click": "swaymsg scratchpad show",
     "on-click-right": "kitty --class transterm"
   },
   "custom/keyboard": {
     "exec": "/etc/nixos/scripts/waybar/waybar-keyboard",
-    "format": "<span font='12' rise='-1500'> </span><span rise='500'>{}</span>",
+    "format": "<span font='16' rise='-1500'> </span><span rise='500'>{}</span>",
     "interval": 30,
     "on-click": "/etc/nixos/scripts/waybar/waybar-keyboard switch",
     "return-type": "json"
@@ -119,7 +119,7 @@
   },
   "custom/diskinfo": {
     "interval": 30,
-    "format": "<span font='12' rise='-1500'> </span><span rise='500'>{}</span>",
+    "format": "<span font='16' rise='-1500'> </span><span rise='500'>{}</span>",
     "return-type": "json",
     "exec": "/etc/nixos/scripts/waybar/waybar-diskinfo",
     "on-click": "kitty --title popupterm gotop",
@@ -127,19 +127,19 @@
     "tooltip-format": "{used} / {total}"
   },
    "custom/snap": {
-    "format": "<span font='12' rise='-1500'></span>",
+    "format": "<span font='16' rise='-1500'></span>",
     "on-click": "grim -g \"$(slurp)\" \"$HOME/Pictures/Screenshots/$(date +%Y%m%d_%Hh%Mm%Ss)_area.png\"",
     "tooltip": false
   },
   "custom/protoncheck": {
 		"exec": "source /etc/nixos/secrets/env ; cd /tmp ; protoncheck --username $PROTONMAIL_USERNAME --password $PROTONMAIL_PASSWORD",
-		"format": "<span font='12' rise='-1500'> </span>{}",
+		"format": "<span font='16' rise='-1500'> </span>{}",
 		"interval": 30,
 		"on-click": "xdg-open https://mail.protonmail.com/inbox"
   },
   "custom/tmpmail": {
     "interval": 30,
-    "format": "<span font='11' rise='-1500'></span>",
+    "format": "<span font='13' rise='-1500'></span>",
     "exec": "echo \"\"; echo \"$(cat /tmp/tmpmailgen 2>/dev/null || echo -n 'No address available')\"; echo \"tmpmail\"
 ",
     "on-click": "generated=$(cat /tmp/tmpmailgen) && swaymsg exec wl-copy $generated",
@@ -149,13 +149,13 @@
   },
   "custom/wttr": {
     "format": "{}",
-    "exec": "curl https://wttr.in/Sundsvall,Sweden?format=%c%3Cspan%20rise=%22-1750%22%3E%t%3C/span%3E",
+    "exec": "curl https://wttr.in/Sundsvall,Sweden?format=%c%3Cspan%20rise=%2269%22%3E%t%3C/span%3E",
     "on-click": "kitty --hold --title popupterm curl wttr.in/Sundsvall",
     "interval": 1800,
     "tooltip": false
   },
   "idle_inhibitor": {
-    "format": "<span font='12' rise='-1500'>{icon}</span>",
+    "format": "<span font='16' rise='-1500'>{icon}</span>",
     "tooltip": false,
     "format-icons": {
       "activated": "",
@@ -163,9 +163,9 @@
     }
   },
   "pulseaudio": {
-    "format": "<span font='11' rise='-1500'>{icon}</span> {volume}%",
-    "format-bluetooth": "<span font='11' rise='-1500'>{icon}</span> ",
-    "format-muted": "<span font='11' rise='-1500'>婢</span>",
+    "format": "<span font='13' rise='-1500'>{icon}</span> {volume}%",
+    "format-bluetooth": "<span font='13' rise='-1500'>{icon}</span> ",
+    "format-muted": "<span font='13' rise='-1500'>婢</span>",
     "format-icons": {
       "headphones": "",
       "handsfree": "",
@@ -183,11 +183,11 @@
   "cpu": {
     "on-click": "kitty --title popupterm gotop",
     "tooltip": false,
-    "format": "<span font='12' rise='-1500'>﬙ </span><span rise='500'>{usage}%</span>",
+    "format": "<span font='16' rise='-1500'>﬙ </span><span rise='500'>{usage}%</span>",
     "interval": 10
   },
   "network": {
-    "format": "<span font='12' rise='-1500'>{icon}</span>",
+    "format": "<span font='16' rise='-1500'>{icon}</span>",
     "format-icons": {
       "wifi": ["直"],
       "ethernet": [""],
@@ -198,7 +198,7 @@
   },
   "memory": {
     "interval": 30,
-    "format": "<span font='12' rise='-1500'> </span><span rise='500'>{used:0.1f}GB</span>",
+    "format": "<span font='16' rise='-1500'> </span><span rise='500'>{used:0.1f}GB</span>",
     "tooltip": true,
     "tooltip-format": "{used:0.1f}GB / {total:0.1f}GB"
   },
@@ -220,7 +220,7 @@
     "thermal-zone": 2,
     "hwmon-path": "/sys/class/hwmon/hwmon3/temp1_input",
     "critical-threshold": 80,
-    "format": "<span font='12' rise='-1500'>﨎 </span><span rise='500'>{temperatureC}°C</span>",
-    "format-critical": "<span font='12' rise='-1500'>﨎 </span><span rise='500'>{temperatureC}°C</span>",
+    "format": "<span font='16' rise='-1500'>﨎 </span><span rise='500'>{temperatureC}°C</span>",
+    "format-critical": "<span font='16' rise='-1500'>﨎 </span><span rise='500'>{temperatureC}°C</span>",
   }
 }
