look: improving sway, wofi, kitty, and tridactyl

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -15,46 +15,79 @@
 # APPEARANCE
 #
 
+#
+# Theme
+#
+
 include ./catppuccin.conf
 
-# No license for bold and italic yet
+#
+# Font (desktop license from https://fsd.it/shop/fonts/pragmatapro/)
+#
+
 font_family PragmataPro Mono Liga
-bold_font PragmataPro Mono Liga
-italic_font PragmataPro Mono Liga
-bold_italic_font PragmataPro Mono Liga
+bold_font PragmataPro Mono Liga Bold
+italic_font PragmataPro Mono Liga Italic
+bold_italic_font PragmataPro Mono Liga Bold Italic
 font_size 10
 
-# Slightly adjusted line height to improve glyp/icon for some fonts
-adjust_line_height 135%
+# Increase line height since PragmataPro Mono itself has no line spacing
 
-# Disable ligatures for text currently in cursor
+adjust_line_height 140%
+
+#
+# Cursor
+#
+
+# Disable ligatures in cursor for readability
+
 disable_ligatures cursor
+
+# Block cursor with no disgusting blinking
 
 cursor_blink_interval 0
 cursor_shape block
 
+#
+# Window
+#
+
+# Padding and borders
+
 window_padding_width 10 12
 window_border_width 2px
 
-active_border_color #F8BD96
-inactive_border_color #F8BD96
+# Background and opacity (dynamic unneeded, disabled for better performance)
 
 background_opacity 0.98
-dynamic_background_opacity yes
+dynamic_background_opacity no
+
+#
+# Tab bar
+#
+# References:
+#   - Tab icons: 
+#
+# Notes:
+#   - Font style can be set in (in)active_tab_font_style or with markup in tab_title_template
+#
 
 tab_bar_style separator
-tab_bar_margin_height 6.0 0.0
-tab_bar_margin_width 4.0
-tab_separator " "
-tab_title_template "  {title} "
-active_tab_title_template "{fmt.bold}  {title} {fmt.nobold}"
+tab_bar_margin_height 7.0 0.0
+tab_bar_margin_width 5.0
+tab_separator "·"
+tab_title_template " {title} "
+active_tab_title_template " {fmt.bold}{title}{fmt.nobold} "
 tab_bar_background none
-active_tab_font_style = italic
-inactive_tab_font_style = italic
+active_tab_font_style normal
+inactive_tab_font_style normal
+
+# Resize in greater steps
 
 window_resize_step_cells 20
 window_resize_step_lines 20
 
+# Layouts to enable by default
 enabled_layouts horizontal,vertical,tall,grid
 
 #
