--- a/config/swaylock/config
+++ b/config/swaylock/config
@@ -1,164 +1,36 @@
-##############
-#  SWAYLOCK  #
-##############
+##
+#  SWAYLOCK-EFFECTS CONFIGURATION
+#
+#  Swaylock configuration with Catppuccin color palette.
+#  See: https://github.com/catppuccin/catppuccin
+##
 
-# Source = https://github.com/arcticicestudio/nord/issues/132
-
-# Path to the config file
-# config=<config_file>
-
-# Turn the screen into the given color instead of white
-color=2e3440ff
-
-# Enable debugging output
-# debug
-
-# When an empty password is provided by the user, do not validate it
+clock
+font="Input Sans Compressed"
+font-size=12
+scaling="fill"
 ignore-empty-password
-
-# Show the number of failed authentication attempts on the indicator
 show-failed-attempts
-
-# Detach from the controlling terminal after locking
-# Note: this is the default behavior of i3lock
-# daemonize
-
-# Display the given image
-# image [[<output>]:]<path>
-
-# Display the current xkb layout while typing
 show-keyboard-layout
-
-# Force hiding the current xkb layout while typing, even if more than one layout
-# is configured or the show-keyboard-layout option is set
-# hide-keyboard-layout
-
-# Disable the Caps Lock Text
-# disable-caps-lock-text
-
-# Show the current Caps Lock state also on the indicator
-# indicator-caps-lock
-
-# Image scaling mode: 'stretch', 'fill', 'fit', 'center', 'tile' & 'solid\color'
-# scaling
-
-# Same as scaling=tile
-# tiling
-
-# Disable the unlock indicator
-# no-unlock-indicator
-
-# Sets the color of backspace highlight segments
-bs-hl-color=b48eadff
-
-# Sets the color of backspace highlight segments when Caps Lock is active
-caps-lock-bs-hl-color=d08770ff
-
-# Sets the color of the key press highlight segments when Caps Lock is active
-caps-lock-key-hl-color=ebcb8bff
-
-# Sets the font of the text
-font=Input Sans Condensed
-
-# FUTURE RELEASE
-# Sets a fixed font size for the indicator text
-# font-size=<size>
-
-# FUTURE RELEASE
-# Sets the indicator to show even if idle
-# indicator-idle-visible
-
-# Sets the indicator radius (default: 50)
-indicator-radius=100
-
-# Sets the indicator thickness (default: 10)
+indicator-radius=150
 indicator-thickness=10
-
-# FUTURE RELEASE
-# Sets the horizontal position of the indicator
-# indicator-x-position
-
-# FUTURE RELEASE
-# Sets the vertical position of the indicator
-# indicator-y-position
-
-# Sets the color of the inside of the indicator
-inside-color=2e3440ff
-
-# Sets the color of the inside of the indicator when cleared
-inside-clear-color=81a1c1ff
-
-# Sets the color of the inside of the indicator when Caps Lock is active
-# inside-caps-lock-color=<rrggbb[aa]>
-
-# Sets the color of the inside of the indicator when verifying
-inside-ver-color=5e81acff
-
-# Sets the color of the inside of the indicator when invalid
-inside-wrong-color=bf616aff
-
-# Sets the color of key press highlight segments
-key-hl-color=a3be8cff
-
-# Sets the background color of the box containing the layout text
-layout-bg-color=2e3440ff
-
-# Sets the color of the border of the box containing the layout text
-# layout-border-color=<rrggbb[aa]>
-
-# Sets the color of the layout text
-# layout-text-color=<rrggbb[aa]>
-
-# Sets the color of the line between the inside and ring
-# line-color=<rrggbb[aa]>
-
-# Sets the color of the line between the inside and ring when cleared
-# line-clear-color=<rrggbb[aa]>
-
-# Sets the color of the line between the inside and ring when Caps Lock is active
-# line-caps-lock-color=<rrggbb[aa]>
-
-# Sets the color of the line between the inside and ring when verifying
-# line-ver-color=<rrggbb[aa]>
-
-# Sets the color of the line between the inside and ring when invalid
-# line-wrong-color=<rrggbb[aa]>
-
-# Use the inside color for the line between the inside and ring
-# line-uses-inside
-
-# Use the ring color for the line between the inside and ring
-line-uses-ring
-
-# Sets the color of the outside of the indicator when typing or idle
-ring-color=3b4252ff
-
-# Sets the color of the outside of the indicator when cleared
-ring-clear-color=88c0d0ff
-
-# Sets the color of the ring of the indicator when Caps Lock is active
-# ring-caps-lock-color=<rrggbb[aa]>
-
-# Sets the color of the outside of the indicator when verifying
-ring-ver-color=81a1c1ff
-
-# Sets the color of the outside of the indicator when invalid
-ring-wrong-color=d08770ff
-
-# Sets the color of the lines that separate highlight segments
-separator-color=3b4252ff
-
-# Sets the color of the text
-text-color=eceff4ff
-
-# Sets the color of the text when cleared
-text-clear-color=3b4252ff
-
-# Sets the color of the text when Caps Lock is active
-# text-caps-lock-color=<rrggbb[aa]>
-
-# Sets the color of the text when verifying
-text-ver-color=3b4252ff
-
-# Sets the color of the text when invalid
-text-wrong-color=3b4252ff
+color="#F5E0DC"
+inside-color="#1E1E2E"
+inside-ver-color="#1E1E2E"
+key-hl-color="#96CDFB"
+ring-color="#1E1E2E"
+ring-ver-color="#1E1E2E"
+separator-color="#1E1E2E"
+line-uses-inside
+layout-bg-color="#00000000"
+layout-border-color="#00000000"
+layout-text-color="#eceff4"
+screenshots
+indicator-idle-visible
+datestr="%H:%M"
+timestr="%A"
+grace=10
+fade-in=1
+effect-greyscale
+effect-blur=6x8
+effect-vignette=0.6:0.8
