feat(nvim): adding key maps for creating new directory structures and files

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -39,9 +39,9 @@ adjust_line_height 140%
 # Cursor
 #
 
-# Disable ligatures in cursor for readability
+# Set to "cursor" to disable ligatures in cursor for readability
 
-disable_ligatures cursor
+disable_ligatures never
 
 # Block cursor with no disgusting blinking
 
