style(bar): enabling cpu module to be able to click it to open gotop in terminal

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -16,6 +16,7 @@
   "modules-center": [ "custom/clock" ],
   "modules-right": [
     "tray",
+    "cpu",
     "custom/keyboard",
     "custom/wttr",
     "pulseaudio"
