fix(nvim): switching non-working plugins

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -226,19 +226,17 @@ map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
 
 # Scrolling
 
-map kitty_mod+h scroll_page_up
-map kitty_mod+j scroll_line_down
-map kitty_mod+k scroll_line_up
-map kitty_mod+l scroll_page_down
+map kitty_mod+alt+k scroll_page_up
+map kitty_mod+alt+j scroll_page_down
 
 map kitty_mod+u scroll_page_up
 map kitty_mod+d scroll_page_down
 
-map kitty_mod+up scroll_page_up
-map kitty_mod+down scroll_page_down
+map kitty_mod+alt+up scroll_page_up
+map kitty_mod+alt+down scroll_page_down
 
 #
-# Remapping overlapping defaults from kitty_mod+key to kitty_mod+alt+key
+# Remapping overlapping defaults
 #
 
 map kitty_mod+alt+h show_scrollback
@@ -258,5 +256,8 @@ map ctrl+shift+enter send_text all \x1b[13;6u
 map ctrl+backspace send_text all \x1b[127;5u
 map shift+backspace send_text all \x1b[127;2u
 map ctrl+shift+backspace send_text all \x1b[127;6u
+
+map ctrl+shift+j send_text all \x1b[106;6u
+map ctrl+shift+k send_text all \x1b[107;6u
 
 # vim:ft=kitty
